--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.5",
     "uuid": "^9.0.0",
